syntax = "proto3";

import "Proto/ActionIntelligence.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "YouRata.Common.Proto";

package conflict_monitor_message;

service ActionIntelligenceService
{
    rpc GetActionIntelligence (google.protobuf.Empty) returns (ActionIntelligence);
}

